<resources>
    <string name="app_name">Simple GPS tracker</string>
    <string name="home">Home</string>
    <string name="tracks">Tracks</string>
    <string name="settings">Settings</string>
    <string name="update_time">Update time</string>
    <string name="update_time_summary">Location update time</string>
    <string name="location">Location</string>
    <string name="track_color">Track color</string>
    <string name="track_color_summary">Chose track color</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>