<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/location">
        <ListPreference
            android:defaultValue="3000"
            android:entries="@array/loc_time_update_name"
            android:entryValues="@array/loc_time_update_value"
            android:key="update_time_key"
            android:title="@string/update_time"
            app:icon="@drawable/ic_update_time"
            app:summary="@string/update_time_summary" />

        <ListPreference
            android:defaultValue="#278EA7"
            android:entries="@array/track_color_name"
            android:entryValues="@array/track_color_value"
            android:key="color_key"
            android:title="@string/track_color"
            app:icon="@drawable/ic_circle"
            app:summary="@string/track_color_summary" />
    </PreferenceCategory>
</PreferenceScreen>